--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   publish = "dist"
 
 [[redirects]]
-  from = "/api/v1"
+  from = "/api/v1/"
   to = "https://storeserver-production-bc7e.up.railway.app"
   status = 200
   force = true
