--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,6 @@
   publish = "dist"
 
 [[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/proxy/:splat"
+  from = "/api/v1/*"
+  to = "/.netlify/functions/proxy/:splat"  # Ensure a forward slash before :splat
   status = 200
